@@ -6,7 +6,6 @@ import net.minecraft.core.Direction;
 import net.minecraft.world.Containers;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
-import net.minecraft.world.ItemInteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.context.BlockPlaceContext;
@@ -41,13 +40,8 @@ public class CoasterBlock extends BaseEntityBlock {
     protected static final VoxelShape TRAY_SHAPE = Block.box(1.0D, 0.0D, 1.0D, 15.0D, 1.0D, 15.0D);
 
     public CoasterBlock() {
-        super(Properties.ofFullCopy(Blocks.BROWN_CARPET).sound(SoundType.WOOD).instabreak());
+        super(Properties.copy(Blocks.BROWN_CARPET).sound(SoundType.WOOD).instabreak());
         this.registerDefaultState(this.getStateDefinition().any().setValue(ROTATION, 0).setValue(SIZE, 0).setValue(INVISIBLE, false));
-    }
-
-    @Override
-    protected MapCodec<? extends BaseEntityBlock> codec() {
-        return CODEC;
     }
 
     @Override
@@ -67,18 +61,12 @@ public class CoasterBlock extends BaseEntityBlock {
     }
 
     @Override
-    public ItemInteractionResult useItemOn(ItemStack stack, BlockState state, Level level, BlockPos pos, Player player, InteractionHand hand, BlockHitResult hitResult) {
+    public InteractionResult use(BlockState state, Level level, BlockPos pos, Player player, InteractionHand hand, BlockHitResult hitResult) {
+        ItemStack stack = player.getItemInHand(hand);
         if (level.getBlockEntity(pos) instanceof CoasterBlockEntity coasterBlockEntity) {
+            if (!stack.isEmpty())
+                return coasterBlockEntity.useWithoutItem(state, level, pos, player, hitResult);
             return coasterBlockEntity.useItemOn(stack, level, state, pos, player, hand);
-        }
-
-        return ItemInteractionResult.PASS_TO_DEFAULT_BLOCK_INTERACTION;
-    }
-
-    @Override
-    protected InteractionResult useWithoutItem(BlockState state, Level level, BlockPos pos, Player player, BlockHitResult hitResult) {
-        if (level.getBlockEntity(pos) instanceof CoasterBlockEntity coasterBlockEntity) {
-            return coasterBlockEntity.useWithoutItem(state, level, pos, player, hitResult);
         }
 
         return InteractionResult.PASS;
@@ -141,12 +129,12 @@ public class CoasterBlock extends BaseEntityBlock {
     }
 
     @Override
-    public ItemStack getCloneItemStack(LevelReader level, BlockPos pos, BlockState state) {
-        if (level.getBlockEntity(pos) instanceof CoasterBlockEntity blockEntity && blockEntity.getItems().stream().anyMatch(stack -> !stack.isEmpty())) {
+    public ItemStack getCloneItemStack(BlockGetter blockGetter, BlockPos pos, BlockState state) {
+        if (blockGetter.getBlockEntity(pos) instanceof CoasterBlockEntity blockEntity && blockEntity.getItems().stream().anyMatch(stack -> !stack.isEmpty())) {
             List<ItemStack> stacks = blockEntity.getItems().stream().filter(stack -> !stack.isEmpty()).toList();
-            return stacks.getLast();
+            return stacks.get(stacks.size()-1);
         }
-        return super.getCloneItemStack(level, pos, state);
+        return super.getCloneItemStack(blockGetter, pos, state);
     }
 
     @Override
